--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -76,3 +76,31 @@ button:active {
     /* Green */
     color: white;
 }
+
+#content {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+#content td,
+#content th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+#content tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+#content tr:hover {
+    background-color: #ddd;
+}
+
+#content th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: teal;
+    color: white;
+}
